# livraria-2023

./: .env.exemplo  README.md  db.sqlite3  pyproject.toml  requirements.txt
config/: settings.py  urls.py
core/: admin.py
core/migrations/: 0001_initial.py  0002_autor_editora.py  0003_livro.py  0004_livro_autores.py  0005_livro_capa.py  0006_compra.py  0007_itenscompra.py  0008_itenscompra_preco_item.py  0009_compra_data.py  0010_compra_tipo_pagamento.py
core/models/: __init__.py  autor.py  compra.py  livro.py
core/serializers/: __init__.py  autor.py  categoria.py  compra.py  editora.py  livro.py
core/views/: autor.py  categoria.py  compra.py  editora.py  livro.py
uploader/migrations/: 0001_initial.py
usuario/: admin.py  models.py
usuario/auth/: __init__.py  login.py  register.py
usuario/migrations/: 0001_initial.py  0002_usuario_foto.py  0003_usuario_tipo_usuario.py  0004_usuario_username.py
